force-app/main/default/objects/CU_hook_Description__mdt/CU_hook_Description__mdt.object-meta.xml
<CustomObject>
    <description>MIS-8010  CU forms - new description field for GTM</description>
    <label>CU Hook Description</label>
    <pluralLabel>CU hook Description</pluralLabel>
</CustomObject>