force-app/main/default/objects/CU_hook_Description__mdt/fields/CU_hook_Description__c.field-meta.xml
<CustomField>
    <fullName>CU_hook_Description__c</fullName>
    <label>CU hook Description</label>
    <type>TextArea</type>
</CustomField>