force-app/main/default/objects/CU_hook_Description__mdt/fields/CU_subject__c.field-meta.xml
<CustomField>
    <fullName>CU_subject__c</fullName>
    <label>CU subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>