force-app/main/default/objects/CU_hook_Description__mdt/fields/current_registration_type__c.field-meta.xml
<CustomField>
    <fullName>current_registration_type__c</fullName>
    <label>Current Registration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>